tests/dataset/tpc-ds/compiler/pl/q97.error
run: exit status 2
ERROR: /tmp/q97.pl:58: user:main '<meta-call>'/1: Unknown procedure: exists/2
